# Stereo-vOdometry

./: CMakeLists.txt  README.md
config/: default.yaml
include/myslam/: algorithm.h  camera.h  config.h  core.h  dataset.h  feature.h  frame.h  frontend.h  g2o_types.h  map.h  mappoint.h  viewer.h  visual_odometry.h
src/: CMakeLists.txt  config.cpp  dataset.cpp  frontend.cpp  map.cpp
test/: CMakeLists.txt  CameraTest.cpp  ConfigTest.cpp  FeatureTest.cpp  FrameTest.cpp  FrontendTest.cpp  Map_MapPointTest.cpp  TrackingTest.cpp  ViewerTest.cpp
